Pass --basedir to mysql_install_db

Based on patch from https://bugs.kde.org/367075

BUG: 367075
FIXED-IN: 16.12.0